<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainLinearLayoutSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/subtitle_Honeydew"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/mainImageButtonManual"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/title_manual"
            android:text="@string/manual"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/mainImageButtonExplode"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/explorded"
            android:text="@string/explode"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/mainImageButtonFold"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawableStart="@drawable/folded"
            android:text="@string/fold"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainLinearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/content_subtitle_margin"
        android:layout_below="@id/mainLinearLayoutSubtitle"
        android:orientation="vertical">
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/location_label"
            android:textSize="@dimen/content_title_font_size"
            android:gravity="center"
            android:textColor="@color/content_text"/>
        <LinearLayout
            android:id="@+id/mainLinearLayoutLongitude"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/longitude"
                android:gravity="center"
                android:textColor="@color/content_text"
                android:writePermission="0"	/>
            <EditText
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:hint="@string/degree_hint"
                android:gravity="center"
                android:textColor="@color/content_text"	/>
            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/longitude_unit"
                android:gravity="center_vertical"
                android:textColor="@color/content_text"
                android:writePermission="0"	/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainLinearLayoutLatitude"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="1" >
            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/latitude"
                android:gravity="center"
                android:textColor="@color/content_text"
                android:writePermission="0"
                />
            <EditText
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:hint="@string/degree_hint"
                android:gravity="center"
                android:textColor="@color/content_text"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/latitude_unit"
                android:textColor="@color/content_text"
                android:writePermission="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLinearLayoutOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/acontent_operator_margin"
        android:layout_below="@id/mainLinearLayoutContent"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/mainImageButtonRead"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawableStart="@drawable/read"
            android:text="@string/main_read"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/mainImageButtonSetting"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawableStart="@drawable/edit"
            android:text="@string/main_setting"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"  />

        <Button
            android:id="@+id/mainImageButtoClear"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:drawableStart="@drawable/edit_clear"
            android:text="@string/clear"
            android:textColor="@color/button_text"
            android:background="@color/button_blink"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/button_margin_left"
            android:paddingEnd="0dp"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
</RelativeLayout>
