<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/title_background"
    tools:context="com.sanetel.control.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="@dimen/login_image_weight"
                android:src="@drawable/login_sanetel" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@dimen/login_scroll_content_weight"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/login_account_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:textSize="@dimen/login_account_password_text_size"
                        android:text="@string/login_account_label"
                        android:textAlignment="textEnd"
                        android:paddingEnd="@dimen/register_text_size"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/login_content_edit_weight">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="@dimen/login_account_password_text_size"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="@dimen/login_content_label_weight"
                        android:textSize="@dimen/login_account_password_text_size"
                        android:text="@string/login_password_label"
                        android:textAlignment="textEnd"
                        android:paddingEnd="@dimen/register_text_size"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/login_content_edit_weight">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textSize="@dimen/login_account_password_text_size"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="@dimen/login_content_label_weight"
                        android:textSize="@dimen/login_account_password_text_size"
                        android:text="@string/login_remember_account"
                        android:textAlignment="textEnd" />

                    <Switch
                        android:id="@+id/login_switcher_auto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="@dimen/login_content_edit_weight"
                        android:checked="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/button_blink"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <!--LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_login_enroll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:onClick="Enroll"
                        android:text="@string/login_register"
                        android:textSize="@dimen/login_account_password_text_size"
                        android:textColor="@color/green" />

                    <Button
                        android:id="@+id/btn_login_forget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/login_forget_password"
                        android:textSize="@dimen/login_account_password_text_size"
                        android:textColor="@color/green" />
                </LinearLayout-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/view_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="showMoreMenu">

            <TextView
                android:id="@+id/textView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:gravity="center"
                android:text="@string/login_server_set_label"
                android:textSize="@dimen/login_server_info_text_size"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/textView03"
                android:clickable="false"
                android:src="@drawable/login_more_up" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/menuView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffffffff" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_weight="@dimen/login_content_label_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_server_info_text_size"
                    android:text="@string/login_server_ip"
                    android:textAlignment="textEnd"/>


                <EditText
                    android:id="@+id/editTextServerIP"
                    android:layout_weight="@dimen/login_content_edit_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/login_server_ip_hint"
                    android:textSize="@dimen/login_server_info_text_size"
                    tools:layout_editor_absoluteX="-24dp"
                    tools:layout_editor_absoluteY="376dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_weight="@dimen/login_content_label_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_server_info_text_size"
                    android:text="@string/login_product_type"
                    android:textAlignment="textEnd"/>

                <Spinner
                    android:id="@+id/spinnerServerType"
                    android:layout_weight="@dimen/login_content_edit_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="17dp"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


